--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 		"@smui/button": "^6.0.0-beta.16",
 		"@smui/card": "^6.0.0-beta.16",
 		"@smui/common": "^6.0.0-beta.16",
-		"@smui/icon-button": "^6.0.0-beta.16",
+		"@smui/icon-button": "^6.0.0",
 		"@smui/layout-grid": "^6.0.0-beta.16",
+		"@smui/snackbar": "^6.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"smui-theme": "^6.0.0-beta.16",
