--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@smui/button": "^6.0.0-beta.16",
 		"@smui/card": "^6.0.0-beta.16",
 		"@smui/common": "^6.0.0-beta.16",
+		"@smui/dialog": "^6.0.0",
 		"@smui/icon-button": "^6.0.0",
 		"@smui/layout-grid": "^6.0.0-beta.16",
 		"@smui/snackbar": "^6.0.0",
